--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "bootstrap": "^5.2.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
