debug Sending email

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "EmailHost": "smtp.outlook.com",
+  "EmailUsername": "jayson.aviso1@gmail.com",
+  "EmailPassword": "jayson123!@#",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
